# aska-backend

./: .gitignore  .pnp.cjs  README.md  docker-compose.yml  marmaid.md  package-lock.json  package.json  pyproject.toml  serverless.yml
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: auto-assign-author.yml  deploy-dev.yml  lint.yml  test.yml
env/: dev.yml  local.yml
sandbox/dummy_data/: 1-K16813-0718.json  2-K16813-0803.json  3-K16813-0809.json  4-K16813-0911.json  5-K16813-0914.json  6-K16813-1013.json  7-K16813-1026.json  8-K16813-1027.json
sandbox/invoke/: main.py
sandbox/ipy_invoke/: main.ipynb
sandbox/lambda_invoke/: main.py  page.json
sandbox/morisaki/: .gitignore  notebook.ipynb  pyproject.toml  requirements.txt
sandbox/morisaki-experiment/: .gitignore  faker.js  main.js  main.py  requirements.txt  server.js
sandbox/morisaki/data/: K16611_score_record.csv
sandbox/morisaki/notebook/: main.ipynb
sandbox/morisaki/src/: analyzer.py
sandbox/nakayama/: OpenAPI.yml  encode.py  nakayama_invoke.ipynb
sandbox/nakayama/serverless/: handler.py  serverless.yml
sandbox/nakayama/src/: download.html  download.js  env-vals.js  ul-dl-shared.js  upload.html  upload.js
sandbox/zaki/: csv_generator.py  find_page_matching.py  find_page_matching_csv.py  find_page_matching_json.py  page.json
sandbox/zaki/data/: pages.json  similarity_score.csv  similarity_score.json
src/ecr/img2pdf/: Dockerfile  app.py  requirements.txt
src/ecr/makediff/: app.py  calculator.py  image.py  requirements.txt
src/ecr/matching_calculator/: Dockerfile  app.py
src/ecr/pdf2img/: Dockerfile  app.py  requirements.txt
src/v1/: alembic.ini  schemas.py
src/v1/aws/: cognito.py  lambda.py  lambda_client.py  s3.py
src/v1/config/: settings.py
src/v1/controllers/: dev.py  diff.py  image.py  image_processor.py  json.py  json_processor.py  matching.py  page.py  pdf.py  processor.py  project.py  s3watch.py  user.py  version.py
src/v1/database/: base.py  session.py
src/v1/features/: keypoints.py
src/v1/handlers/: app.py  invoked.py  s3watch.py
src/v1/matching/: Dockerfile  app.py
src/v1/matching_calculator/: app.py  requirements.txt
src/v1/middlewares/: common.py
src/v1/migrations/: env.py
src/v1/migrations/versions/: 0879e0f3010e_.py  0b17cc0bdb9b_change_the_status_column_type_to_enum.py  17b3f0496dea_.py  17dd088ff3a8_.py  1a3fcb3d7eae_.py  25cd4e5ff0b2_.py  2a26c869c611_.py  3267852ebe53_.py  34cbb9a773cd_.py  3c78460cec51_.py  3ee7695e8b08_.py  4f7d0b8e9580_change_index_column_to_local_index_and_.py  50fdc7cf30e8_.py  6e74ec5daeff_.py  7fab3e45e848_add_project_table.py  87476f24d9f7_.py  8ec3ce737b04_.py  94984805c1d1_.py  a96e2e7baf53_.py  acc96a2aadcf_.py  b6083fb048d8_.py  bba3448b4f0b_.py  cc6e20ab3178_.py  cf912eaff4f9_.py  (+4 more)
src/v1/models/: image.py  json.py  matching.py  page.py  pdf.py  project.py  user.py  version.py
src/v1/pdf2img/: Dockerfile  app.py  requirements.txt
src/v1/routes/: dev.py  diff.py  image.py  json.py  matching.py  page.py  pdf.py  project.py  user.py  version.py  versions.py
src/v1/schemas/: common.py  diff.py  image.py  json.py  lambda.py  page.py  project.py  status.py  user.py  version.py
src/v1/views/: console.py
terraform/environments/dev/: main.tf  outputs.tf  provider.tf
terraform/modules/cognito/: main.tf  outputs.tf
terraform/modules/network/: main.tf  outputs.tf  variables.tf
tests/test_v1/test_config/: test_settings.py
